--- a/comments.css
+++ b/comments.css
@@ -1,25 +1,3 @@
-.createcomment {
-    display: block;
-}
-
-.name {
-    display: inline-block;
-}
-
-.email {
-    display: inline-block;
-    position: absolute;
-}
-
-.comment {
-    width: 1200px;
-}
-
-.submitbtn {
-    display: inline-block;
-    position: absolute;
-}
-
-.likebtn {
-    display: inline-block;
+.bord {
+    border-bottom: 1px solid gray;
 }
