--- a/posts.css
+++ b/posts.css
@@ -13,7 +13,7 @@
 
 .img {
     width: 200px;
-    min-height: 200px;
+    height: 200px;
     display: inline-block;
     border-right: 1px solid gray;
 }
@@ -26,7 +26,6 @@
     display: inline-block;
     position: absolute;
     width: 1000px;
-    color: rgba(31, 31, 31, 0.5);
 }
 
 .descnoimg {
